Created jaffle_shop.md. Updated description to stg_customers in stg_jaffle_shop.yml

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -2,7 +2,7 @@ version: 2
 
 models:
   - name: stg_customers
-    description: This model cleans up customer data
+    description: This model cleans up customer data. One unique customer per row.
     columns: 
       - name: customer_id
         description: Primary key
